QAALTranspiler/src/QAALParser.java
// Generated from C:/Users/Anton/Documents/Code/QAALInterpreter/QAALTranspiler/src\QAAL.g4 by ANTLR 4.10.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class QAALParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.10.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, Classical_op=23, Transformation=24, 
		Comment=25, Swap=26, NumExp=27, Index=28, Reg=29, Bit=30, Qubit=31, Int=32, 
		Angle=33, Unit=34, Bool=35, Stop=36, Operand=37, Pi=38, Bits=39, Qubits=40, 
		Intlit=41, Keywords=42, Idfr=43, WS=44;
	public static final int
		RULE_prog = 0, RULE_dec = 1, RULE_body = 2, RULE_output = 3, RULE_additional_reg = 4, 
		RULE_subroutines_dec = 5, RULE_reg_dec = 6, RULE_bit_dec = 7, RULE_vardec = 8, 
		RULE_ro_params = 9, RULE_reg_params = 10, RULE_cs_dec = 11, RULE_cs_type = 12, 
		RULE_exp = 13, RULE_quantum_op = 14, RULE_angle_rotation = 15, RULE_args = 16, 
		RULE_jump = 17, RULE_label = 18, RULE_cs_exp = 19, RULE_arithmetic = 20, 
		RULE_variable = 21;
	private static String[] makeRuleNames() {
		return new String[] {
			"prog", "dec", "body", "output", "additional_reg", "subroutines_dec", 
			"reg_dec", "bit_dec", "vardec", "ro_params", "reg_params", "cs_dec", 
			"cs_type", "exp", "quantum_op", "angle_rotation", "args", "jump", "label", 
			"cs_exp", "arithmetic", "variable"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'output'", "'define'", "':'", "'('", "','", "')'", "'!'", "':='", 
			"'Mz'", "'->'", "'Rx'", "'Ry'", "'Rz'", "'CRx'", "'CRy'", "'CRz'", "'jump'", 
			"'if zero'", "'if gtr'", "'@'", "'randomise'", "'set'", null, null, null, 
			"'SWAP'", null, null, "'register'", "'bit'", "'qubit'", "'integer'", 
			"'angle'", "'unit'", "'bool'", "'stop'", "'operand'", "'pi'", "'bits'", 
			"'qubits'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, "Classical_op", 
			"Transformation", "Comment", "Swap", "NumExp", "Index", "Reg", "Bit", 
			"Qubit", "Int", "Angle", "Unit", "Bool", "Stop", "Operand", "Pi", "Bits", 
			"Qubits", "Intlit", "Keywords", "Idfr", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "QAAL.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public QAALParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ProgContext extends ParserRuleContext {
		public DecContext dec() {
			return getRuleContext(DecContext.class,0);
		}
		public BodyContext body() {
			return getRuleContext(BodyContext.class,0);
		}
		public TerminalNode Stop() { return getToken(QAALParser.Stop, 0); }
		public TerminalNode EOF() { return getToken(QAALParser.EOF, 0); }
		public List<OutputContext> output() {
			return getRuleContexts(OutputContext.class);
		}
		public OutputContext output(int i) {
			return getRuleContext(OutputContext.class,i);
		}
		public ProgContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_prog; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof QAALListener ) ((QAALListener)listener).enterProg(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof QAALListener ) ((QAALListener)listener).exitProg(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof QAALVisitor ) return ((QAALVisitor<? extends T>)visitor).visitProg(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgContext prog() throws RecognitionException {
		ProgContext _localctx = new ProgContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_prog);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(44);
			dec();
			setState(45);
			body();
			setState(46);
			match(Stop);
			setState(48); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(47);
				output();
				}
				}
				setState(50); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==T__0 );
			setState(52);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DecContext extends ParserRuleContext {
		public List<Additional_regContext> additional_reg() {
			return getRuleContexts(Additional_regContext.class);
		}
		public Additional_regContext additional_reg(int i) {
			return getRuleContext(Additional_regContext.class,i);
		}
		public List<Subroutines_decContext> subroutines_dec() {
			return getRuleContexts(Subroutines_decContext.class);
		}
		public Subroutines_decContext subroutines_dec(int i) {
			return getRuleContext(Subroutines_decContext.class,i);
		}
		public DecContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_dec; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof QAALListener ) ((QAALListener)listener).enterDec(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof QAALListener ) ((QAALListener)listener).exitDec(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof QAALVisitor ) return ((QAALVisitor<? extends T>)visitor).visitDec(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DecContext dec() throws RecognitionException {
		DecContext _localctx = new DecContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_dec);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(57);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << Reg) | (1L << Bit) | (1L << Qubit) | (1L << Operand))) != 0)) {
				{
				{
				setState(54);
				additional_reg();
				}
				}
				setState(59);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(63);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__1) {
				{
				{
				setState(60);
				subroutines_dec();
				}
				}
				setState(65);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BodyContext extends ParserRuleContext {
		public List<Cs_decContext> cs_dec() {
			return getRuleContexts(Cs_decContext.class);
		}
		public Cs_decContext cs_dec(int i) {
			return getRuleContext(Cs_decContext.class,i);
		}
		public List<ExpContext> exp() {
			return getRuleContexts(ExpContext.class);
		}
		public ExpContext exp(int i) {
			return getRuleContext(ExpContext.class,i);
		}
		public BodyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_body; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof QAALListener ) ((QAALListener)listener).enterBody(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof QAALListener ) ((QAALListener)listener).exitBody(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof QAALVisitor ) return ((QAALVisitor<? extends T>)visitor).visitBody(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BodyContext body() throws RecognitionException {
		BodyContext _localctx = new BodyContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_body);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(69);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(66);
					cs_dec();
					}
					} 
				}
				setState(71);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
			}
			setState(73); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(72);
				exp();
				}
				}
				setState(75); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__6) | (1L << T__8) | (1L << T__10) | (1L << T__11) | (1L << T__12) | (1L << T__13) | (1L << T__14) | (1L << T__15) | (1L << T__19) | (1L << Classical_op) | (1L << Transformation) | (1L << Swap) | (1L << Idfr))) != 0) );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class OutputContext extends ParserRuleContext {
		public TerminalNode Bit() { return getToken(QAALParser.Bit, 0); }
		public TerminalNode Idfr() { return getToken(QAALParser.Idfr, 0); }
		public TerminalNode Reg() { return getToken(QAALParser.Reg, 0); }
		public TerminalNode Index() { return getToken(QAALParser.Index, 0); }
		public OutputContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_output; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof QAALListener ) ((QAALListener)listener).enterOutput(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof QAALListener ) ((QAALListener)listener).exitOutput(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof QAALVisitor ) return ((QAALVisitor<? extends T>)visitor).visitOutput(this);
			else return visitor.visitChildren(this);
		}
	}

	public final OutputContext output() throws RecognitionException {
		OutputContext _localctx = new OutputContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_output);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(77);
			match(T__0);
			setState(85);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case Bit:
				{
				setState(78);
				match(Bit);
				setState(79);
				match(Idfr);
				}
				break;
			case Reg:
				{
				setState(80);
				match(Reg);
				setState(81);
				match(Idfr);
				setState(83);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==Index) {
					{
					setState(82);
					match(Index);
					}
				}

				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Additional_regContext extends ParserRuleContext {
		public Reg_decContext reg_dec() {
			return getRuleContext(Reg_decContext.class,0);
		}
		public Bit_decContext bit_dec() {
			return getRuleContext(Bit_decContext.class,0);
		}
		public TerminalNode Operand() { return getToken(QAALParser.Operand, 0); }
		public Additional_regContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_additional_reg; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof QAALListener ) ((QAALListener)listener).enterAdditional_reg(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof QAALListener ) ((QAALListener)listener).exitAdditional_reg(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof QAALVisitor ) return ((QAALVisitor<? extends T>)visitor).visitAdditional_reg(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Additional_regContext additional_reg() throws RecognitionException {
		Additional_regContext _localctx = new Additional_regContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_additional_reg);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(88);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==Operand) {
				{
				setState(87);
				match(Operand);
				}
			}

			setState(92);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case Reg:
				{
				setState(90);
				reg_dec();
				}
				break;
			case Bit:
			case Qubit:
				{
				setState(91);
				bit_dec();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Subroutines_decContext extends ParserRuleContext {
		public TerminalNode Idfr() { return getToken(QAALParser.Idfr, 0); }
		public VardecContext vardec() {
			return getRuleContext(VardecContext.class,0);
		}
		public BodyContext body() {
			return getRuleContext(BodyContext.class,0);
		}
		public TerminalNode Stop() { return getToken(QAALParser.Stop, 0); }
		public List<Additional_regContext> additional_reg() {
			return getRuleContexts(Additional_regContext.class);
		}
		public Additional_regContext additional_reg(int i) {
			return getRuleContext(Additional_regContext.class,i);
		}
		public Subroutines_decContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_subroutines_dec; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof QAALListener ) ((QAALListener)listener).enterSubroutines_dec(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof QAALListener ) ((QAALListener)listener).exitSubroutines_dec(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof QAALVisitor ) return ((QAALVisitor<? extends T>)visitor).visitSubroutines_dec(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Subroutines_decContext subroutines_dec() throws RecognitionException {
		Subroutines_decContext _localctx = new Subroutines_decContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_subroutines_dec);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(94);
			match(T__1);
			setState(95);
			match(Idfr);
			setState(96);
			vardec();
			setState(97);
			match(T__2);
			setState(101);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << Reg) | (1L << Bit) | (1L << Qubit) | (1L << Operand))) != 0)) {
				{
				{
				setState(98);
				additional_reg();
				}
				}
				setState(103);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(104);
			body();
			setState(105);
			match(Stop);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Reg_decContext extends ParserRuleContext {
		public TerminalNode Reg() { return getToken(QAALParser.Reg, 0); }
		public TerminalNode Idfr() { return getToken(QAALParser.Idfr, 0); }
		public TerminalNode Intlit() { return getToken(QAALParser.Intlit, 0); }
		public TerminalNode Bits() { return getToken(QAALParser.Bits, 0); }
		public TerminalNode Qubits() { return getToken(QAALParser.Qubits, 0); }
		public Reg_decContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_reg_dec; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof QAALListener ) ((QAALListener)listener).enterReg_dec(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof QAALListener ) ((QAALListener)listener).exitReg_dec(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof QAALVisitor ) return ((QAALVisitor<? extends T>)visitor).visitReg_dec(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Reg_decContext reg_dec() throws RecognitionException {
		Reg_decContext _localctx = new Reg_decContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_reg_dec);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(107);
			match(Reg);
			setState(108);
			match(Idfr);
			setState(109);
			match(T__2);
			setState(110);
			match(Intlit);
			setState(111);
			_la = _input.LA(1);
			if ( !(_la==Bits || _la==Qubits) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Bit_decContext extends ParserRuleContext {
		public TerminalNode Idfr() { return getToken(QAALParser.Idfr, 0); }
		public TerminalNode Bit() { return getToken(QAALParser.Bit, 0); }
		public TerminalNode Qubit() { return getToken(QAALParser.Qubit, 0); }
		public Bit_decContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_bit_dec; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof QAALListener ) ((QAALListener)listener).enterBit_dec(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof QAALListener ) ((QAALListener)listener).exitBit_dec(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof QAALVisitor ) return ((QAALVisitor<? extends T>)visitor).visitBit_dec(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Bit_decContext bit_dec() throws RecognitionException {
		Bit_decContext _localctx = new Bit_decContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_bit_dec);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(113);
			_la = _input.LA(1);
			if ( !(_la==Bit || _la==Qubit) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			setState(114);
			match(Idfr);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VardecContext extends ParserRuleContext {
		public Ro_paramsContext ro_params() {
			return getRuleContext(Ro_paramsContext.class,0);
		}
		public Reg_paramsContext reg_params() {
			return getRuleContext(Reg_paramsContext.class,0);
		}
		public VardecContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_vardec; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof QAALListener ) ((QAALListener)listener).enterVardec(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof QAALListener ) ((QAALListener)listener).exitVardec(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof QAALVisitor ) return ((QAALVisitor<? extends T>)visitor).visitVardec(this);
			else return visitor.visitChildren(this);
		}
	}

	public final VardecContext vardec() throws RecognitionException {
		VardecContext _localctx = new VardecContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_vardec);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(117);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__3) {
				{
				setState(116);
				ro_params();
				}
			}

			setState(120);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==Idfr) {
				{
				setState(119);
				reg_params();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Ro_paramsContext extends ParserRuleContext {
		public List<Cs_typeContext> cs_type() {
			return getRuleContexts(Cs_typeContext.class);
		}
		public Cs_typeContext cs_type(int i) {
			return getRuleContext(Cs_typeContext.class,i);
		}
		public List<TerminalNode> Idfr() { return getTokens(QAALParser.Idfr); }
		public TerminalNode Idfr(int i) {
			return getToken(QAALParser.Idfr, i);
		}
		public Ro_paramsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ro_params; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof QAALListener ) ((QAALListener)listener).enterRo_params(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof QAALListener ) ((QAALListener)listener).exitRo_params(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof QAALVisitor ) return ((QAALVisitor<? extends T>)visitor).visitRo_params(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Ro_paramsContext ro_params() throws RecognitionException {
		Ro_paramsContext _localctx = new Ro_paramsContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_ro_params);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(122);
			match(T__3);
			setState(123);
			cs_type();
			setState(124);
			match(Idfr);
			setState(131);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__4) {
				{
				{
				setState(125);
				match(T__4);
				setState(126);
				cs_type();
				setState(127);
				match(Idfr);
				}
				}
				setState(133);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(134);
			match(T__5);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Reg_paramsContext extends ParserRuleContext {
		public List<TerminalNode> Idfr() { return getTokens(QAALParser.Idfr); }
		public TerminalNode Idfr(int i) {
			return getToken(QAALParser.Idfr, i);
		}
		public Reg_paramsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_reg_params; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof QAALListener ) ((QAALListener)listener).enterReg_params(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof QAALListener ) ((QAALListener)listener).exitReg_params(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof QAALVisitor ) return ((QAALVisitor<? extends T>)visitor).visitReg_params(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Reg_paramsContext reg_params() throws RecognitionException {
		Reg_paramsContext _localctx = new Reg_paramsContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_reg_params);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(136);
			match(Idfr);
			setState(141);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__4) {
				{
				{
				setState(137);
				match(T__4);
				setState(138);
				match(Idfr);
				}
				}
				setState(143);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Cs_decContext extends ParserRuleContext {
		public Cs_typeContext cs_type() {
			return getRuleContext(Cs_typeContext.class,0);
		}
		public TerminalNode Idfr() { return getToken(QAALParser.Idfr, 0); }
		public ArithmeticContext arithmetic() {
			return getRuleContext(ArithmeticContext.class,0);
		}
		public Cs_decContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_cs_dec; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof QAALListener ) ((QAALListener)listener).enterCs_dec(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof QAALListener ) ((QAALListener)listener).exitCs_dec(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof QAALVisitor ) return ((QAALVisitor<? extends T>)visitor).visitCs_dec(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Cs_decContext cs_dec() throws RecognitionException {
		Cs_decContext _localctx = new Cs_decContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_cs_dec);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(144);
			match(T__6);
			setState(145);
			cs_type();
			setState(146);
			match(Idfr);
			setState(147);
			match(T__7);
			setState(148);
			arithmetic();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
